JWt-token, convert, convert history